@@ -953,8 +953,9 @@ private:
  * S >> L;
  * @endcode
  */
-template<typename STREAM>
-inline STREAM &operator<<(STREAM &S, const pqxx::result::field &F)	//[t46]
+template<typename CHAR>
+inline PGSTD::basic_ostream<CHAR> &operator<<(
+	PGSTD::basic_ostream<CHAR> &S, const pqxx::result::field &F)	//[t46]
 {
   S.write(F.c_str(), F.size());
   return S;
